Fix bg image jumps on mobile scroll v2.4

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,16 +31,16 @@ body{
   padding: 0;
 }
 .body-bg {
+  display: block;
   position: absolute;
+  width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
   z-index: -1;
+  transform: scale(1.0);
   background: url('../img/doctor-bg-img.jpeg') #555 no-repeat center;
+  background-position: center;
   background-size: cover;
   background-attachment: fixed;
 }
